--- a/index.html
+++ b/index.html
@@ -3,9 +3,76 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d369qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link type="text/css" rel="stylesheet" 
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
+
+	/* Large Desktop */
+	@media (min-width: 980px) {
+	  body {
+	    padding-top: 60px;
+	}
+	.linediv-l {
+		border-right: 1px white solid;
+		}
+	.linediv-r {
+		border-left: 1px white solid;
+	}
+}
+
+	@media (max-width: 480px) {
+		.copy {
+		paddding: 2.5% 10%;
+	}
+	.linediv-l {
+		border-bottom: 1px white solid;
+	}
+	linediv-r {
+		border-bottom: 1px white solid;
+	}
+}
+body{
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+.heading, .subheading {
+	font-family: 'ubuntu', Helvetica, Arial, sans-serif;
+	text-align: center;
+}
+p {
+	font-size: 18px;
+	line-height: 24px;
+}
+.pitch {
+	padding: 2.5% 0%;
+}
+.order {
+	padding: 2.5% 0%;
+}
+.actions {
+	background-color: #343434;
+	padding: 3% 0%;
+}
+.video, .thermometer, .order, .social, .statistics {
+	text-align: center;
+}
+.statistics h3, .statistics p {
+	color: white;
+}
+
+.copy {
+	padding-top: 2.5%;
+	padding-bottom: 2.5%;
+	text-align: justify;
+}
+.asset {
+	padding: 2.5% 0%;
+}
+
+	
+
+
       body {
         padding-top: 20px;
         padding-bottom: 40px;
@@ -39,6 +106,83 @@
     </style>
   </head>
   <body>
+
+<!-- Mobile-friendly navbar adapted from example. -->
+<div class="navbar navbar-inverse navbar-fixed-top">
+	<div class="navbar-inner">
+		<div class="container">
+			<button type="button" class="btn btn-navbar"
+				data-toggle="collapse" data-target=".nav-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="brand" href="#">Bitstarter</a>
+		<div class="nav-collapse collapse">
+			<ul class="nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</div><!--/.nav-collapse -->
+		</div>
+	</div>
+</div>
+
+
+<div class="container">
+	
+<div class ="row-fluid heading">
+	<div class="span12">
+		<h1>Product</h1>
+	</div>
+</div>
+<div class="row-fluid subheading">
+	<div class="span12">
+
+	<p class="lead">One sentance description.</p>
+	</div>
+	</div>
+	<div class="row-fluid pitch">
+		<div class="span5 offset1 video">
+			<img class="img-poaroid" src="http://placehold.it/480x300">
+		</div>
+
+		<div class="span5 actions">
+			<div class="span8 offset2">
+				<div class="statistics">
+					<div class="span4">
+
+					<div class="linediv-l">
+					<h3>1000</h3> <p>backers</p>
+					</div>
+				</div>
+			<div class="span4">
+				<div class="linediv-r">
+				<h3>10</h3> <p>days left</p>
+				</div>
+			</div>
+		</div>
+		<div class="span10 offset1">
+			
+			<div class="thermometer progress active">
+		  <div class="bar bar-success" style="width: 60%;"></div>
+  		<div class="bar bar-warning" style="width: 40%;"></div>
+	</div>
+	</div>
+<div class="span6 offset3 order">
+	<button class="btn btn-success btn-large">Preordere</button>
+	</div>
+	<div class="span8 offset2 social">
+		<button class="btn btn-twitter"><i class="icion-twitter"></i> | Twitter</button>
+		<button class="btn btn-facebook"><i class ="'icon-facebook"></i> | Facebook</button>
+	</div>
+</div>
+</div>
+
+
+<div class="navbar navbar-inverse navbar-fixed-top">
+	   <div class="navbar-inner">
     <div class="container">
       <div class="row navigation">
         <div class="span2 logo">
