--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 		border-bottom: 1px white solid;
 	}
 }
+
+/* main body and heading */
 body{
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
@@ -69,43 +71,16 @@ p {
 .asset {
 	padding: 2.5% 0%;
 }
-
-	
-
-
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-      .container {
-        width: 960px;
-      }
-      p.lead {
-        padding-top: 15px;
-      }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
-      }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
-        text-align: center;
-      }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
-      }
-    </style>
-  </head>
-  <body>
+.footer {
+	color: #cccccc;
+	text-align: center;
+}
+.footer a {
+	color: #ccccff;
+	}
+	</style>
+</head>
+<body>
 
 <!-- Mobile-friendly navbar adapted from example. -->
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -129,9 +104,8 @@ p {
 	</div>
 </div>
 
-
 <div class="container">
-	
+
 <div class ="row-fluid heading">
 	<div class="span12">
 		<h1>Product</h1>
@@ -158,89 +132,100 @@ p {
 					</div>
 				</div>
 			<div class="span4">
+				<div class="linediv-c">
+				<h3>$6000</h3> <p>of $10,000</p>
+				</div>
+			</div>
+			<div class="span4">
 				<div class="linediv-r">
 				<h3>10</h3> <p>days left</p>
 				</div>
 			</div>
 		</div>
+	</div>
+
 		<div class="span10 offset1">
-			
+/*bootstrap progress bar */
 			<div class="thermometer progress active">
 		  <div class="bar bar-success" style="width: 60%;"></div>
   		<div class="bar bar-warning" style="width: 40%;"></div>
 	</div>
 	</div>
 <div class="span6 offset3 order">
-	<button class="btn btn-success btn-large">Preordere</button>
+	<button class="btn btn-success btn-large">Preorder</button>
 	</div>
 	<div class="span8 offset2 social">
-		<button class="btn btn-twitter"><i class="icion-twitter"></i> | Twitter</button>
-		<button class="btn btn-facebook"><i class ="'icon-facebook"></i> | Facebook</button>
+		<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+		<button class="btn btn-facebook"><i class ="icon-facebook"></i> | Facebook</button>
 	</div>
 </div>
 </div>
 
 
-<div class="navbar navbar-inverse navbar-fixed-top">
-	   <div class="navbar-inner">
-    <div class="container">
-      <div class="row navigation">
-        <div class="span2 logo">
-          Logo
-        </div>
-        <div class="span6 blank">
-          Blank
-        </div>
-        <div class="span4 about">
-          About
-        </div>
-      </div>
-      <div class="row heading">
-        <div class="span12">
-          <h1>Bitstarter Title</h1>
-        </div>
-      </div> 
-     <div class="row subheading">
-        <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
-        </div>
-      </div>
-      <div class="row pitch">
-        <div class="span6 video">
-          Video
-        </div>
-        <div class="span6">
-          <div class="thermometer">
-            Thermometer
-          </div>
-          <div class="order">
-            Order
-          </div>
-          <div class="social">
-            Social
-          </div>
-        </div>
-      </div>
-      <div class="row section1">
-        <div class="span12">
-          Marketing Section 1
-        </div>
-      </div>
-      <div class="row section2">
-        <div class="span12">
-          Marketing Section 2
-        </div>
-      </div>
-      <div class="row faq">
-        <div class="span12">
-          FAQ
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="span12">
-          Footer
-        </div>
-      </div>
-    </div>
-  </body>
+<div class="row-fluid section1">
+	<div class="span5 offset1 asset">
+		<img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+	<div class="span5 copy">
+		<p>
+			 Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsum. Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$
+		</p>
+	</div>
+</div>
+
+<div class="row-fluid section2">
+	<div class="span5 offset1 copy copy-right">
+		<p>
+			insert text here Hey there, lorem ipsumHey there, lorem ipsumHey there, lor Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$em ipsumHey there, lorem ipsumHey there, lorem ipsum.
+		</p>
+	</div>
+<div class="span5 asset">
+		<img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+</div>
+
+<div class="row-fluid faq">
+	<div class="span10 offset1">
+		<h3>FAQ</h3>
+		<div class="accordion" id="accordion2">
+			<div class="accordion-group">
+				<div class="accordion-heading">
+					<a class="accordion-toggle" data-toggle="collapse"
+						data-parent="#accordion2" href="#collapseOne">
+							What does FAQ stand for?
+						</a>
+					</div>
+				<div id ="collapseOne" class="accordion-body collapse">
+			<div class="accordion-inner">
+				Frequently Asked Question.
+				</div>
+			</div>
+		</div>
+	<div class="accordion-group">
+				<div class="accordion-heading">
+					<a class="accordion-toggle" data-toggle="collapse"
+						data-parent="#accordion2" href="#collapseTwo">
+							What's a Frequently Asked Question?
+						</a>
+					</div>
+				<div id ="collapseTwo" class="accordion-body collapse">
+			<div class="accordion-inner">
+				A question which is commonly asked by users.
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+<div class="row-fluid footer">
+	<div class="span12">
+		<p> This work is licensed under
+			the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+			By-SA 3.0
+			</a>, without all the cruft that would otherwise be
+			put at the bottom of the page.</p>
+			</div>
+			</div>
+		</div>
+	</boy>
 </html>
