--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
   <link rel="stylesheet" href="https://d396quasza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-  <script src="https://d396quasza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+  <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
   <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-  <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700itali..." rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600..." rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+	rel="stylesheet" type="text/css">
   <style type="text/css">
 
 	/* Large Desktop */
@@ -47,6 +47,11 @@ body{
 	font-family: 'ubuntu', Helvetica, Arial, sans-serif;
 	text-align: center;
 }
+p.lead {
+	padding-top: 1.5%;
+	font-size: 24px;
+	line-height: 30px;
+}
 p {
 	font-size: 18px;
 	line-height: 24px;
@@ -55,7 +60,7 @@ p {
 	padding: 2.5% 0%;
 }
 .order {
-	padding: 2.5% 0%;
+	padding: 2% 0%;
 }
 .actions {
 	background-color: #343434;
@@ -79,6 +84,9 @@ p {
 .footer {
 	color: #cccccc;
 	text-align: center;
+}
+.footer p {
+	font-size: 11px;
 }
 .footer a {
 	color: #ccccff;
@@ -113,37 +121,36 @@ p {
 
 <div class ="row-fluid heading">
 	<div class="span12">
-		<h1>Product</h1>
+		<h1>My Amazing Product</h1>
 	</div>
 </div>
 <div class="row-fluid subheading">
 	<div class="span12">
 
-	<p class="lead">One sentance description.</p>
+	<p class="lead">My product can help revolutionize the world!</p>
 	</div>
 	</div>
 	<div class="row-fluid pitch">
 		<div class="span5 offset1 video">
-			<img class="img-poaroid" src="http://placehold.it/480x300">
+			<img class="img-polaroid" src="http://placehold.it/480x300">
 		</div>
 
 		<div class="span5 actions">
 			<div class="span8 offset2">
 				<div class="statistics">
-					<div class="span4">
-
-					<div class="linediv-l">
-					<h3>1000</h3> <p>backers</p>
+				<div class="span4">
+				<div class="linediv-l">
+					<h3>0</h3> <p>backers</p>
 					</div>
 				</div>
 			<div class="span4">
 				<div class="linediv-c">
-				<h3>$6000</h3> <p>of $10,000</p>
+				<h3>$0</h3> <p>of $10,000</p>
 				</div>
 			</div>
 			<div class="span4">
 				<div class="linediv-r">
-				<h3>10</h3> <p>days left</p>
+				<h3>30</h3> <p>days left</p>
 				</div>
 			</div>
 		</div>
@@ -152,8 +159,8 @@ p {
 		<div class="span10 offset1">
 /*bootstrap progress bar */
 			<div class="thermometer progress active">
-		  <div class="bar bar-success" style="width: 60%;"></div>
-  		<div class="bar bar-warning" style="width: 40%;"></div>
+		  <div class="bar bar-success" style="width: 0%;"></div>
+  		<div class="bar bar-warning" style="width: 100%;"></div>
 	</div>
 	</div>
 <div class="span6 offset3 order">
@@ -165,8 +172,6 @@ p {
 	</div>
 </div>
 </div>
-
-
 <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
 		<img class="img-polaroid" src="http://placehold.it/480x300">
@@ -188,40 +193,44 @@ p {
 		<img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
 </div>
+     <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+      <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
+      <!-- <a href="http://twitter.github.io/bootstrap/javascript.html#collapse">http://twitter.github.io/bootstrap/javascript.html#collapse -->
+      <div class="row-fluid faq">
+          <div class="span10 offset1">
+            <h3>FAQ</h3>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseOne">
+                    What does FAQ stand for?
+                  </a>
+                </div>
+                <div id="collapseOne" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Frequently Asked Question.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseTwo">
+                    What's a Frequently Asked Question?
+                  </a>
+                </div>
+                <div id="collapseTwo" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    A question which is commonly asked by users.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-<div class="row-fluid faq">
-	<div class="span10 offset1">
-		<h3>FAQ</h3>
-		<div class="accordion" id="accordion2">
-			<div class="accordion-group">
-				<div class="accordion-heading">
-					<a class="accordion-toggle" data-toggle="collapse"
-						data-parent="#accordion2" href="#collapseOne">
-							What does FAQ stand for?
-						</a>
-					</div>
-				<div id ="collapseOne" class="accordion-body collapse">
-			<div class="accordion-inner">
-				Frequently Asked Question.
-				</div>
-			</div>
-		</div>
-	<div class="accordion-group">
-				<div class="accordion-heading">
-					<a class="accordion-toggle" data-toggle="collapse"
-						data-parent="#accordion2" href="#collapseTwo">
-							What's a Frequently Asked Question?
-						</a>
-					</div>
-				<div id ="collapseTwo" class="accordion-body collapse">
-			<div class="accordion-inner">
-				A question which is commonly asked by users.
-				</div>
-			</div>
-		</div>
-	</div>
+      </div>
 
-</div>
 <div class="row-fluid footer">
 	<div class="span12">
 		<p> This work is licensed under
