--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@ p {
 
 <div class ="row-fluid heading">
 	<div class="span12">
-		<h1>My Amazing Product</h1>
+		<h1>Pic Captionator / Send or Drink</h1>
 	</div>
 </div>
 <div class="row-fluid subheading">
 	<div class="span12">
 
-	<p class="lead">My product can help revolutionize the world!</p>
+	<p class="lead">Let your friends decide what to say / Send it or Drink it!</p>
 	</div>
 	</div>
 	<div class="row-fluid pitch">
@@ -140,12 +140,12 @@ p {
 				<div class="statistics">
 				<div class="span4">
 				<div class="linediv-l">
-					<h3>0</h3> <p>backers</p>
+					<h3>2</h3> <p>backers</p>
 					</div>
 				</div>
 			<div class="span4">
 				<div class="linediv-c">
-				<h3>$0</h3> <p>of $10,000</p>
+				<h3>$50</h3> <p>of $10,000</p>
 				</div>
 			</div>
 			<div class="span4">
@@ -159,8 +159,8 @@ p {
 		<div class="span10 offset1">
 /*bootstrap progress bar */
 			<div class="thermometer progress active">
-		  <div class="bar bar-success" style="width: 0%;"></div>
-  		<div class="bar bar-warning" style="width: 100%;"></div>
+		  <div class="bar bar-success" style="width: 5%;"></div>
+  		<div class="bar bar-warning" style="width: 95%;"></div>
 	</div>
 	</div>
 <div class="span6 offset3 order">
@@ -178,7 +178,8 @@ p {
 	</div>
 	<div class="span5 copy">
 		<p>
-			 Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsum. Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$
+			Don't know what to say? Then let someone else decide! Take your favorite photos and see what others think through the beauty of Pic Captionator. You let friends and even strangers decide what your pictures should say. Whatever caption gets the most votes, wins! It's that easy.  Have fun and see what funny captions your friends will come up with.
+
 		</p>
 	</div>
 </div>
@@ -186,7 +187,7 @@ p {
 <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 		<p>
-			insert text here Hey there, lorem ipsumHey there, lorem ipsumHey there, lor Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$ Hey there, lorem ipsumHey there, lorem ipsumHey there, lorem ipsumHey th$em ipsumHey there, lorem ipsumHey there, lorem ipsum.
+			Need an idea for tonight? How about a drinking game using this awesome website/app! We will randomly select one person from your address book, and one random photo from a group of selected pictures in your phone. We will combine the two and prep a text message. Either select send, or select take a drink. This is the best time you will ever have!
 		</p>
 	</div>
 <div class="span5 asset">
