--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ p {
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="brand" href="#">Bitstarter</a>
+		<a class="brand" href="#">Bitstarter on dev environment</a>
 		<div class="nav-collapse collapse">
 			<ul class="nav">
 				<li class="active"><a href="#">Home</a></li>
