--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@ p {
   		<div class="bar bar-warning" style="width: 95%;"></div>
 	</div>
 	</div>
+
 <div class="span6 offset3 order">
-	<button class="btn btn-success btn-large">Preorder</button>
+
+<a class="coinbase-button" data-code="3fc814ea5cc841be9617df35c7177be7" href="https://coinbase.com/checkouts/3fc814ea5cc841be9617df35c7177be7">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	</div>
 
   <div class="span8 offset2 social">
