--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@ p {
             <div class="nav-collapse collapse navbar-responsive-collapse">
               <ul class="nav">
                 <li class="active">
-                  <a href="index.html">Home</a>
+                  <a href="/">Home</a>
                 </li>
                 <li>
-                  <a href="about.html">About</a>
+                  <a href="/about">About</a>
                 </li>
                 <li>
-                  <a href="contact.html">Contact</a>
+                  <a href="/contact">Contact</a>
                 </li>
                 <li class="dropdown">
                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Dropdown<strong class="caret"></strong></a>
