--- a/contact.html
+++ b/contact.html
@@ -141,16 +141,16 @@ p {
       <div class="navbar">
         <div class="navbar-inner">
           <div class="container-fluid">
-             <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="index.html" class="brand">Josh Topal</a>
+             <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="/index" class="brand">Josh Topal</a>
             <div class="nav-collapse collapse navbar-responsive-collapse">
               <ul class="nav">
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="/index">Home</a>
                 </li>
-                  <a href="about.html">About</a>
+                  <a href="/about">About</a>
                 </li>
                    <li class="active">
-                  <a href="contact.html">Contact</a>
+                  <a href="/contact">Contact</a>
                 </li>
                 <li class="dropdown">
                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Dropdown<strong class="caret"></strong></a>
