--- a/contact.html
+++ b/contact.html
@@ -141,12 +141,13 @@ p {
       <div class="navbar">
         <div class="navbar-inner">
           <div class="container-fluid">
-             <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="/index" class="brand">Josh Topal</a>
+             <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="/" class="brand">Josh Topal</a>
             <div class="nav-collapse collapse navbar-responsive-collapse">
               <ul class="nav">
                 <li>
-                  <a href="/index">Home</a>
+                  <a href="/">Home</a>
                 </li>
+		</li>
                   <a href="/about">About</a>
                 </li>
                    <li class="active">
